--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,36 @@
 :root {
   --main-font:'Roboto', sans-serif ;
-  --main-text-color: #2f303a;
-  --text-color-hover:#2196F3; ;
+  --logo-font: 'Raleway', sans-serif;
+
+  --theme-color-dark: #2f303a;
+  --theme-color-light: #FFFFFF;
+  
+  --button-portfolio: #F5F4FA;
+  --contact-color-footer: rgba(255, 255, 255, 0.6);
+  --logo-color: #000000;
+  --text-color-hover:#2196F3; 
+  --text-color-primary: #757575;;
+  --text-color-h: #212121;;
 }
-.body {
+body {
+  color: var(--text-color-primary);
+  letter-spacing: 0.02em;
+  line-height: 1.17;
+  font-size: 14px;
+  font-weight: 500;
+  font-family: var(--main-font);
   font-style: normal;
 }
-.list-contact{
+ul, ol {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+.list-contact
+{
   display: inline;
 }
 .list
@@ -19,396 +43,187 @@
 
 /* Logo WebStdio*/
 .logo {
-  position: absolute;
-  width: 145px;
-  height: 31px;
-  left: 215px;
-  top: 24px; 
-
-  text-decoration: none;
-  font-family: 'Raleway', sans-serif;
-  font-style: normal;
+  font-family: var(--logo-font);
   font-weight: 700;
   font-size: 26px;
-  line-height: 1.17;
   letter-spacing: 0.03em;
-  color: var(--main-text-color)
+  color: var(--logo-color);
 }
 .span {
+  font-weight: 400;
   line-height: 1.38;
   color: var(--text-color-hover)
 }
 /*Nav-menu*/
 
 .nav-menu {
-  display: inline;
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 500;
-  font-size: 14px;
   line-height: 1.17;
   letter-spacing: 0.02em;
 }
 
-.nav-item1{
-  position: absolute;
-  width: 49px;
-  height: 16px;
-  left: 453px;
-  top: 32px;
-  color:#212121;
-}
-
-.nav-item2 {
-  position: absolute;
-  width: 77px;
-  height: 16px;
-  left: 552px;
-  top: 32px;
-  color: #212121;
-}
-
-.nav-item3 {
-  position: absolute;
-  width: 68px;
-  height: 16px;
-  left: 679px;
-  top: 32px;
-  color: #212121;
+.nav-item{
+  color:var(--text-color-h);
 }
 
 .contact-mail {
-  position: absolute;
-  width: 135px;
-  height: 16px;
-  left: 1078px;
-  top: 32px;
+  color: var(--text-color-primary);
+  }
 
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.17;
-  letter-spacing: 0.02em;
-  
-  color: #757575;
+.contact-number 
+{ 
+color: var(--text-color-primary);
 }
 
-.contact-number {
-position: absolute;
-width: 122px;
-height: 16px;
-left: 1263px;
-top: 32px; 
-
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1,17;
-  letter-spacing: 0.02em;
-  color: #757575 
-}
 .list:hover,
 .list:focus {
   color: var(--text-color-hover);
 }
 
-
-   .hero {
-    position: absolute;
-    width: 1600px;
-    height: 600px;
-    top: 80px;
-    background: #2f303a;
-  }
+.hero 
+{
+    background:var(--theme-color-dark);
+}
   
   .title-hero {
-    position: absolute;
-    width: 696px;
-    height: 120px;
-    top: 280px;
-    left: 452px;
-    font-family: "roboto";
-    font-style: normal;
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
-    text-align: center;
     letter-spacing: 0.06em;
     text-transform: uppercase;
-    color: #ffffff;
+    color:var(--theme-color-light);
   }
 
-.button {
-  padding: 0;
-  margin: 0;
-  background-color: aqua;
-  border: none;
+.button
+ {
+  width: 200px;
+  height: 50px;
   cursor: pointer;
-  line-height: 0;
-  font-family: 'Roboto';
   font-weight: 700;
-
   letter-spacing: 0.06em;
   
-  color: #FFFFFF;
-position: absolute;
-width: 200px;
-height: 50px;
-left: 700px;
-top: 430px;
+color: var(--theme-color-light);
 
-background: #2196F3;
+background: var(--text-color-hover);
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 border-radius: 4px;
 }
+
 .button:hover,
 .button:focus {
-  background-color: transparent;
+  background-color: #188CE8;
 }
 
 
-/*Benefits*/
-.title-benefits{
-  visibility: hidden;
-}
-
-.benefits-item1{
-  position: absolute;
-  width: 270px;
-  height: 101px;
-  left: 215px;
-  top: 774px;
-}
-.benefits-item2{
-  position: absolute;
-  width: 270px;
-  height: 101px;
-  left: 515px;
-  top: 774px;
-}
-.benefits-item3{
-  position: absolute;
-  width: 270px;
-  height: 101px;
-  left: 815px;
-  top: 774px;
-}
-.benefits-item4{
-  position: absolute;
-  width: 270px;
-  height: 101px;
-  left: 1115px;
-  top: 774px;
+/*Benefits*/ 
 }
 .title-ben{
-  font-family: 'Roboto';
-  font-style: normal;
   font-weight: 700;
-  font-size: 14px;
-  line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   
-  color: #212121;
+  color: var(--text-color-h);
 }
 
 .description{
-  font-family: 'Roboto';
-  font-style: normal;
   font-weight: 400;
-  font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   
-  color: #757575;
 }
+
 /*Works*/
 .title-works{
-  position: absolute;
-  width: 476px;
-  height: 42px;
-  left: 612px;
-  top: 969px;
-  
-  font-family: 'Roboto';
-  font-style: normal;
   font-weight: 700;
   font-size: 36px;
-  line-height: 1.17;
-  text-align: center;
   letter-spacing: 0.03em;
   
-  color: #212121;
+  color: var(--text-color-h);
 }
-.list-item-works1{
-  position: absolute;
-  width: 370px;
-  height: 294px;
-  left: 215px;
-  top: 1061px;
-}
-.list-item-works2{
-  position: absolute;
-  width: 370px;
-  height: 294px;
-  left: 615px;
-  top: 1061px;
-}
-.list-item-works3{
-  position: absolute;
-  width: 370px;
-  height: 294px;
-  left: 1015px;
-  top: 1061px;
-}
+
 /*Team*/
-.title-team{
-  position: absolute;
-  width: 364px;
-  height: 42px;
-  left: 668px;
-  top: 1543px;
-  
-  font-family: 'Roboto';
-  font-style: normal;
+.title-team{  
   font-weight: 700;
   font-size: 36px;
   line-height:1.17;
-  text-align: center;
   letter-spacing: 0.03em;
   
-  color: #212121;
+  color:var(--text-color-h);
 }
 
 
-.title-team-player{
-  font-family: 'Roboto';
-font-style: normal;
-font-weight: 500;
+.title-team-player
+{
+
 font-size: 16px;
 line-height: 1.2;
-text-align: center;
 letter-spacing: 0.03em;
 
-color: #212121;
+color: var(--text-color-h);
 }
-.text-team-player{
-font-family: 'Roboto';
-font-style: normal;
+
+.text-team-player
+{
+
 font-weight: 400;
 font-size: 16px;
 line-height: 1.2px;
-text-align: center;
 letter-spacing: 0.03em;
 
-color: #757575;
 }
-.list-item-team1{
-position: absolute;
-width: 270px;
-height: 260px;
-left: 215px;
-top: 1635px;
-}
-.list-item-team2{
-  position: absolute;
-  width: 270px;
-  height: 260px;
-  left: 515px;
-  top: 1635px;
-}
-.list-item-team3{
-  position: absolute;
-  width: 270px;
-  height: 260px;
-  left: 815px;
-  top: 1635px;
-}
-.list-item-team4{
-  position: absolute;
-  width: 270px;
-  height: 260px;
-  left: 1115px;
-  top: 1635px;
-}
+
 /*footer*/
-.logo-footer{
-  position: absolute;
-  width: 145px;
-  height: 31px;
-  left: 215px;
-  top: 60px;
-  text-decoration: none;
-  font-family: 'Raleway',
-  sans-serif;
-  font-style: normal;
+.logo-footer
+{
+  font-family: var(--logo-font);
   font-weight: 700;
   font-size: 26px;
-  line-height: 1.17;
   letter-spacing: 0.03em;
-  color: #ffffff
+  color: var(--logo-color);
 }
-.span-f{
+.span-f
+{
+  font-weight: 400;
   line-height: 1.38;
   color: var(--text-color-hover)
 }
-.text-addres{
-  position: absolute;
-  width: 231px;
-  height: 21px;
-  left: 215px;
-  top: 111px;
+.text-addres
+{
   
-  font-family: 'Roboto';
-  font-style: normal;
   font-weight: 400;
-  font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   
-  color: #fff;
+  color:var(--theme-color-light);
 }
-.footer{
-  position: absolute;
-  width: 1600px;
-  height: 252px;
-  left: 0px;
-  top: 2097px;
-  
-  background: #2F303A;
+.footer
+{
+  background: var(--theme-color-dark);
 }
-.list-item-contact1{
-position: absolute;
-width: 231px;
-height: 21px;
-left: 215px;
-top: 141px;
 
-font-family: 'Roboto';
-font-style: normal;
-font-weight: 400;
-font-size: 14px;
-line-height: 1.71;
-letter-spacing: 0.03em;
-
-color: rgba(255, 255, 255, 0.6);
-}
-.list-item-contact2{
-  
-  position: absolute;
-  width: 231px;
-  height: 21px;
-  left: 215px;
-  top: 171px;
-  
-  font-family: 'Roboto';
-  font-style: normal;
+.list-item-contact
+{
   font-weight: 400;
-  font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   
-  color: rgba(255, 255, 255, 0.6);
+  color: var(--contact-color-footer);
+
+}
+
+/*Portfolio */
+
+li>.button
+{
+  border-radius: 4px;
+
+  background: var(--button-portfolio);
+  color: var(--text-color-h);
+
+}
+
+li>.button:hover,
+li>.button:focus 
+{
+  background-color: var(--text-color-hover);
+  color: var(--theme-color-light);
 }
