--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,7 @@ ul, ol {
 
 a {
   text-decoration: none;
+  font-style: normal;
 }
 
 .list-contact
@@ -93,29 +94,30 @@ color: var(--text-color-primary);
     color:var(--theme-color-light);
   }
 
-.button
- {
+.button-modal {
   width: 200px;
   height: 50px;
   cursor: pointer;
   font-weight: 700;
   letter-spacing: 0.06em;
+  font-size: 16px;
+  line-height: 1.88;
   
-color: var(--theme-color-light);
+ color: var(--theme-color-light);
 
-background: var(--text-color-hover);
-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-border-radius: 4px;
+ background: var(--text-color-hover);
+ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+ border-radius: 4px;
 }
 
-.button:hover,
-.button:focus {
+.button-modal:hover,
+.button-modal:focus {
   background-color: #188CE8;
 }
 
 
 /*Benefits*/ 
-}
+
 .title-ben{
   font-weight: 700;
   letter-spacing: 0.03em;
@@ -200,6 +202,10 @@ letter-spacing: 0.03em;
   background: var(--theme-color-dark);
 }
 
+.logo-footer {
+  color: var(--theme-color-light);
+}
+
 .list-item-contact
 {
   font-weight: 400;
@@ -208,6 +214,10 @@ letter-spacing: 0.03em;
   
   color: var(--contact-color-footer);
 
+}
+
+.link-footer-map {
+ color: var(--theme-color-light);
 }
 
 /*Portfolio */
@@ -226,4 +236,8 @@ li>.button:focus
 {
   background-color: var(--text-color-hover);
   color: var(--theme-color-light);
+}
+
+.title-cards {
+  color: var(--text-color-h);
 }
