--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,7 @@ body {
   letter-spacing: 0.03em;
   line-height: 1.17;
   font-size: 14px;
+  font-weight: 500;
   font-family: var(--main-font);
  
 }
